# glass-ui-public

./: CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  package.json  push-to-github.sh  pyproject.toml  setup.py
glass_ui/: api.py  boot.py  hooks.py  install.py  modules.txt  patches.txt  utils.py
glass_ui/config/: glass_ui.py
glass_ui/public/: build.json
glass_ui/public/css/: components.css  glassmorphism.css
glass_ui/public/js/: glassmorphism.js  ui-enhancements.js
glass_ui/templates/: base.html
glass_ui/templates/includes/: glass_footer.html  glass_navbar.html
glass_ui/www/: components.html  dashboard.html
